--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/CSPOP-BACKEND?autoReconnect=true&serverTimezone=Asia/Seoul
+    username: root
+    password: root
   jpa:
     hibernate:
       ddl-auto: create
