--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    // security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
