--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,3 +3,8 @@ spring:
     url: jdbc:h2:mem:testdb;MODE=MYSQL
     username: sa
     password:
+
+jwt:
+  token:
+    secret-key: VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
+    expire-length: 3600000
