--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,21 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/CSPOP-BACKEND?autoReconnect=true&serverTimezone=Asia/Seoul
-    username: root
-    password: root
+    url: ${SOURCE_MYSQL_URL}
+    username: ${SOURCE_MYSQL_USERNAME}
+    password: ${SOURCE_MYSQL_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
-        format_sql: true
-    show-sql: true
+        format_sql: false
+        show_sql: false
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:sql/init.sql, classpath:sql/data.sql
+
+jwt:
+  token:
+    secret-key: ${JWT_SECRET_KEY}
+    expire-length: 3600000
