chore: 페치 조인 최적화 옵션 추가
#6

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
       hibernate:
         format_sql: false
         show_sql: false
+        default_batch_fetch_size: 500
   sql:
     init:
       mode: always
